--- a/src/app/components/user/usertemplate/usereventtemplate/usereventform/usereventform.component.html
+++ b/src/app/components/user/usertemplate/usereventtemplate/usereventform/usereventform.component.html
@@ -20,12 +20,12 @@
       </div>
       <div class="form-group">
         <label for="location">Location</label>
-        <input type="text" class="form-control" id="location" name="location" aria-describedby="Location" placeholder="Location"  [(ngModel)]="location">
+        <input type="text" class="form-control" id="location" name="location" aria-describedby="Location" placeholder="Location"  [(ngModel)]="location_name">
       </div>
       <div>
         <label for="date">Date</label>
         <div class="input-group">
-          <input type='date' class="form-control"  [(ngModel)]="date">
+          <input type='date' class="form-control"  [(ngModel)]="time">
         </div>
       </div>
 
