--- a/src/app/components/connection/connectionlist/connectionlist.component.html
+++ b/src/app/components/connection/connectionlist/connectionlist.component.html
@@ -19,27 +19,35 @@
             </a>
         </li>
       </ul> -->
-      <ul class="nav nav-tabs card-header-tabs li-justify-content-center col-xs-3">
-        <li class="nav-item border-right">
+      <ul class="nav nav-tabs card-header-tabs li-justify-content-center">
+        <li class="nav-item border-right col-xs-3">
           <a class="nav-link search-legislator-navpills" href="#">
             <span class="badge badge-secondary badge-active">
-              Connected
+              Approval Pending
               <span class="badge badge-light"> 10 </span>
             </span>
           </a>
         </li>
-        <li class="nav-item border-right">
+        <li class="nav-item border-right col-xs-3">
           <a class="nav-link search-legislator-navpills" href="#">
-            <span class="badge badge-secondary">
-              Pending
+            <span class="badge badge-secondary badge-active">
+              Request Sent
               <span class="badge badge-light"> 10 </span>
             </span>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item border-right col-xs-3">
           <a class="nav-link search-legislator-navpills" href="#">
             <span class="badge badge-secondary">
-              All
+              Followers
+              <span class="badge badge-light"> 10 </span>
+            </span>
+          </a>
+        </li>
+        <li class="nav-item col-xs-3">
+          <a class="nav-link search-legislator-navpills" href="#">
+            <span class="badge badge-secondary">
+              Followings
               <span class="badge badge-light"> 10 </span>
             </span>
           </a>
@@ -66,6 +74,10 @@
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
       </div>
+      <div class="tab-pane fade p-3" id="four" role="tabpanel" aria-labelledby="four-tab">
+        <h5 class="card-title">All Request's</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 
+      </div>
     </div>
   </div>
