--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -69,6 +69,25 @@
                                     (click)="cancelEditProfile()">
                                 <i class="fa fa-times" aria-hidden="true"></i>
                             </button>
+
+                            <div ngbDropdown  class="d-inline-block nav-item" *ngIf="isProfileInEditMode()"> 
+                                <button class="btn btn-outline-primary btn-xs"
+                                        id="dropdownAddSection"
+                                        ngbDropdownToggle>
+                                    <i class="fa fa-plus" aria-hidden="true"></i>
+                                </button>
+                                <div ngbDropdownMenu
+                                     aria-labelledby="dropdownAddSection" id="dropdownAddSection">
+                                    <button class="dropdown-item"
+                                            *ngFor="let profileTemplate of availableProfileTemplates"
+                                            (click)="addProfileData(profileTemplate)">
+                                        {{profileTemplate.name}}
+                                    </button> 
+                                </div>
+                            </div> 
+
+
+
                         </div>
                     </div>
                     <div>
@@ -307,37 +326,22 @@
         <!-- Begin user profile -->
         <div class="text-center user-profile-2">
             <ul class="list-group">
-                <!-- <li class="list-group-item pointer" *ngIf="!isSelfProfile">
-                    <span class="badge badge-pill badge-primary"  (click)="followEntity()">{{followCntrlLabel}}</span>
-                </li>
-                                    
-                <li class="list-group-item pointer"
-                    [ngClass]="{ 'active': followersActiveCss, 'in-active': !followersActiveCss}">
-                    <span class="badge badge-pill badge-primary" (click)="Followers()">Followers &nbsp;<span class="badge badge-light">{{followersCount}}</span></span>
-                </li>
-                <li class="list-group-item pointer"
-                    [ngClass]="{ 'active': followingsActiveCss, 'in-active': !followingsActiveCss}">
-                    <span class="badge badge-pill badge-primary" (click)="Followings()">Following &nbsp;<span class="badge badge-light">{{followingsCount}}</span></span>
-                </li> -->
                 <li class="list-group-item pointer"
                     [ngClass]="{ 'active': managedByActive, 'in-active': !managedByActive}">
                     <span class="pointer" (click)="managedByUsers()">Managed by</span>
                 </li>                
-                
-                <!--                    <li class="list-group-item pointer" (click)="FollowingCount()"
-                                        [ngClass]="{ 'active': folow, 'in-active': !folow}">
-                                        <span class="badge">245</span>
-                                        <span class="">Following</span>
-                                    </li>
-                                    -->
                 <li class="list-group-item pointer"
                     (click)="Activities()" [ngClass]="{ 'active': activitiesData, 'in-active': !activitiesData}">
                     <span class="pointer">My Posts</span> 
                 </li>
 
-                <li class="list-group-item pointer"
+                <!-- <li class="list-group-item pointer"
                     (click)="Profiles()" [ngClass]="{ 'active': profileData, 'in-active': !profileData}">
                     <span class="pointer">Profile</span> 
+                </li> -->
+                <li class="list-group-item pointer" *ngFor="let profileTemplate of profilesTemplates" (click)="Profiles(profileTemplate.name);loadTemplate(profileTemplate.profileTemplateId)" [ngClass]="{ 'active': profileTemplate.profileTemplateId == activeTemplate && (!activitiesData && !managedByActive), 'in-active': profileTemplate.profileTemplateId != activeTemplate && (!activitiesData && !managedByActive)}">
+                    <i class="material-icons">{{profileTemplate.profileIcon}}</i> {{profileTemplate.name}}
+                    <button *ngIf="isProfileInEditMode()" class="delete-image" type="button" (click)="deleteProfileData(profileTemplate)"> <i class="fa fa-times" aria-hidden="true"></i></button>
                 </li>
             </ul>
 
@@ -387,7 +391,7 @@
                                             <div id="ProfileCollapse" [ngbCollapse]="isProfileCollapsed">
                                                 <div class="card card-nav-tabs">
                                                     <div class="card-header-1 card-header-primary"  id="myHeader">
-                                                        <div class="nav-tabs-navigation">
+                                                      <!--   <div class="nav-tabs-navigation">
                                                             <div class="nav-tabs-wrapper">
                                                                 <ul class="nav nav-tabs justify-content-center nav-pills nav-pills nav-fill"
                                                                     data-tabs="tabs">
@@ -405,8 +409,6 @@
                                                                                 <button *ngIf="isProfileInEditMode()" class="delete-image" type="button" (click)="deleteProfileData(profileTemplate)"> <i class="fa fa-times" aria-hidden="true"></i></button>
 
                                                                             </span>
-                                                                            <!-- <span>
-                                                                            </span> -->
                                                                         </div>
                                                                     </li>
                                                                     <li *ngIf="isProfileInEditMode()" class="nav-item">
@@ -414,7 +416,6 @@
                                                                             <button class="btn btn-outline-primary btn-xs"
                                                                                     id="dropdownAddSection"
                                                                                     ngbDropdownToggle>
-                                                                                <!--Add Section-->
                                                                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                                                             </button>
                                                                             <div ngbDropdownMenu
@@ -427,25 +428,9 @@
                                                                             </div>
                                                                         </div> 
                                                                     </li>
-                                                                    <!-- <li *ngIf="isUserLogged()" class="nav-item">
-                                                                        <div>
-                                                                            <button type="button" *ngIf="isProfileEditable()" class="btn btn-primary btn-xs profile-edit-btn-custom-position" (click)="editProfile()">
-                                                                                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                                                            </button>
-                                                                            <button type="button" *ngIf="isProfileInEditMode()" class="btn btn-primary btn-xs profile-edit-btn-custom-position" (click)="saveProfile()">
-                                                                                <i class="fa fa-save" aria-hidden="true"></i>
-                                                                            </button>
-                                                                            <button type="button"
-                                                                                    *ngIf="isProfileInEditMode()"
-                                                                                    class="btn btn-primary btn-danger"
-                                                                                    (click)="cancelEditProfile()">
-                                                                                <i class="fa fa-times" aria-hidden="true"></i>
-                                                                            </button>
-                                                                        </div>
-                                                                    </li> -->
                                                                 </ul>
                                                             </div>
-                                                        </div>
+                                                        </div> -->
                                                     </div>
     
                                                     <div class="card-body content">
@@ -491,9 +476,29 @@
 
 </div>
 <div class="bottom-tabs">
-    <ul class="nav nav-tabs">
-        <li [ngClass]="{'active':isProfileCollapsed==false}"><button (click)="Profiles()" type="button">Profile</button></li>
-        <li [ngClass]="{'active':isActivityCollapsed==false}"><button type="button" (click)="Activities()">Posts</button></li>
-        <li [ngClass]="{'active':isManagedByCollapsed==false}"><button type="button"  (click)="managedByUsers()">Managed By</button></li>
-      </ul>
+    <ul class="nav nav-tabs mobile-bottom-tabs">
+        <li [ngClass]="{'active':isProfileCollapsed==false}"><button (click)="toggleTemplateDropDown();Profiles(activeTemplatName);loadTemplate(activeTemplate)" type="button">{{activeTemplatName}}</button></li>
+        <li [ngClass]="{'active':isActivityCollapsed==false}"><button type="button" (click)="toggleTemplateDropDown();Activities()">Posts</button></li>
+        <li [ngClass]="{'active':isManagedByCollapsed==false}"><button type="button"  (click)="toggleTemplateDropDown();managedByUsers()">Managed By</button></li>
+        <li [ngClass]="{'active':isProfileCollapsed==false}">
+
+            <div class="btn-group dropup">
+              <button type="button" class="btn btn-secondary dropdown-toggle" (click)="toggleTemplateDropDown()" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
+              </button>
+              <div class="dropdown-menu" id="dropdown-templates-bottom" [ngClass]="{'dropdown-templates-bottom':showDropDown}">
+                  <span class="dropdown-item-text" *ngFor="let profileTemplate of profilesTemplates" (click)="toggleTemplateDropDown();Profiles(profileTemplate.name);loadTemplate(profileTemplate.profileTemplateId)">
+                      <i class="material-icons">{{profileTemplate.profileIcon}}</i> {{profileTemplate.name}}
+                      <span *ngIf="isProfileInEditMode()" class="delete-image" (click)="deleteProfileData(profileTemplate)"> <i class="fa fa-times" aria-hidden="true"></i></span>
+
+                  </span>
+
+              </div>
+            </div>
+
+
+
+      </li>
+
+    </ul>
 </div>
