--- a/src/app/components/searchlegislators/searchlegislators.component.html
+++ b/src/app/components/searchlegislators/searchlegislators.component.html
@@ -94,7 +94,8 @@
       </div> -->
 
       <div class="row">
-        <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 custom-hover-legislator card-body legislator-box-shadow" *ngFor="let legislator of legislators">
+        <!--<div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 custom-hover-legislator card-body legislator-box-shadow" *ngFor="let legislator of legislators">-->
+        <div class="col-lg-4 col-md-3 col-sm-6 col-xs-12 card-body legislator-box-shadow" *ngFor="let legislator of legislators">
           <app-legislator [legislator]=legislator></app-legislator>
         </div>
       </div>
