--- a/src/app/components/searchlegislators/searchlegislators.component.css
+++ b/src/app/components/searchlegislators/searchlegislators.component.css
@@ -89,6 +89,9 @@
   -moz-box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.75);
 }*/
+.legislator-box-shadow:hover{
+  /*border: 1px solid red;*/
+}
 
 
 /*----- button 1 -----*/
