--- a/src/app/components/legislator/legislator.component.html
+++ b/src/app/components/legislator/legislator.component.html
@@ -17,7 +17,8 @@
 <div class="card btn-3">
   <div class="card-body text-center legislator-box-shadow btn-6">
     <fieldset class="rating text-right">
-      <a href="javascript:void(0);" title="Click to add to your circle" (click)="addBookMark()" [ngClass]="{ 'active': bookMark, '': !bookMark }" style="font-size:250%;" class="star-css">&#9733;</a>
+      <a href="javascript:void(0);" *ngIf="bookMark"  title="Click to remove this into your circle" (click)="addBookMark()" [ngClass]="{ 'active': bookMark, '': !bookMark }" style="font-size:250%;" class="star-css">&#9733;</a>
+      <a href="javascript:void(0);" *ngIf="!bookMark"  title="Click to add this into your circle" (click)="addBookMark()" [ngClass]="{ 'active': bookMark, '': !bookMark }" style="font-size:250%;" class="star-css">&#9733;</a>
     </fieldset>
     <!--<fieldset class="rating">
 
@@ -35,7 +36,7 @@
     </p>
 
     <h4 class="card-title">{{legislator.full_name}}</h4>
-    
+
     <p class="card-text">
       <!--
       State: <a [routerLink]="['/user/',legislator.state]" href="javascript:void(0);"
