--- a/src/app/components/user/user/user3.component.html
+++ b/src/app/components/user/user/user3.component.html
@@ -38,7 +38,14 @@
 
     <div class="row">
         <div class="col-sm-4">
-
+          <div class="private-profile-label">
+          <span  class="badge badge-pill badge-primary" >
+            <span  class="badge badge-pill badge-danger" >
+            <i class="fa fa-lock" style="font-size: 25px" aria-hidden="true"></i>
+            </span>
+            This is an Private profile
+          </span>
+          </div>
         </div><!-- End div .col-sm-4 -->
 
         <div class="col-sm-8">
@@ -70,7 +77,7 @@
                                 <i class="fa fa-times" aria-hidden="true"></i>
                             </button>
 
-                            <div ngbDropdown  class="d-inline-block nav-item" *ngIf="isProfileInEditMode()"> 
+                            <div ngbDropdown  class="d-inline-block nav-item" *ngIf="isProfileInEditMode()">
                                 <button class="btn btn-outline-primary btn-xs"
                                         id="dropdownAddSection"
                                         ngbDropdownToggle>
@@ -82,9 +89,9 @@
                                             *ngFor="let profileTemplate of availableProfileTemplates"
                                             (click)="addProfileData(profileTemplate)">
                                         {{profileTemplate.name}}
-                                    </button> 
+                                    </button>
                                 </div>
-                            </div> 
+                            </div>
 
 
 
@@ -97,7 +104,7 @@
                     <!-- CHAMBER-begin -->
 
                         <span  *ngIf="!isEditChamber" class="profile-pills margin-pills">
-                            <a class="padding-pills" [routerLink]="['/user', biodata.chamber]">{{biodata.chamber}}</a>                                
+                            <a class="padding-pills" [routerLink]="['/user', biodata.chamber]">{{biodata.chamber}}</a>
                             <button *ngIf="isProfileInEditMode()" type="button" class="edit-button" (click)="toggleEditChamber()"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
                         </span>
 
@@ -121,7 +128,7 @@
                             <small></small>
                           </div>
                         </ng-template>
-                      
+
                         <ng-template #notFoundTemplate let-notFound>
                           <div [innerHTML]="notFound"></div>
                         </ng-template>
@@ -132,12 +139,12 @@
                       </div>
                     <!-- CHAMBER-end -->
                     </h5>
-                    
+
 
                     <h5>
                     <!-- DISTRICT-begin -->
                         <span *ngIf="!isEditDistrict" class="profile-pills">
-                            <a class="padding-pills" [routerLink]="['/user', biodata.district]">District {{biodata.district}}</a>                                
+                            <a class="padding-pills" [routerLink]="['/user', biodata.district]">District {{biodata.district}}</a>
                             <button *ngIf="isProfileInEditMode()" type="button" class="edit-button" (click)="toggleEditDistrict()"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
                         </span>
                         <!-- <input  *ngIf="isEditParty == true" [ngModel]="biodata.party" type="text" /> -->
@@ -161,7 +168,7 @@
                                 <small></small>
                               </div>
                             </ng-template>
-                          
+
                             <ng-template #notFoundTemplate let-notFound>
                               <div [innerHTML]="notFound"></div>
                             </ng-template>
@@ -172,7 +179,7 @@
                           </div>
                         <!-- DISTRICT-end -->
 
-                        
+
 
                           <!-- STATE-begin -->
                           <span  *ngIf="!isEditState" class="profile-pills">
@@ -200,7 +207,7 @@
                               <small></small>
                             </div>
                           </ng-template>
-                        
+
                           <ng-template #notFoundTemplate let-notFound>
                             <div [innerHTML]="notFound"></div>
                           </ng-template>
@@ -213,7 +220,7 @@
                     </h5>
                     <h5>
                         <!-- PARTY-begin -->
-    
+
                             <span *ngIf="!isEditParty">
                                 <a class="padding-pills" [routerLink]="['/user', biodata.party]">{{biodata.party}} Party</a>
                                 <button *ngIf="isProfileInEditMode()" type="button" class="edit-button" (click)="toggleEditParty()"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></button>
@@ -230,8 +237,8 @@
                                   [notFoundTemplate]="notFoundTemplate">
                                 </ng-autocomplete>
                                 <button class="save-button" type="button" (click)="toggleEditParty()"><i class="fa fa-floppy-o" aria-hidden="true"></i></button>
-    
-    
+
+
                                 <ng-template #itemTemplate let-item>
                                   <div class="item">
                                     <img src="{{item.photoUrl}}" height="25">
@@ -239,7 +246,7 @@
                                     <small></small>
                                   </div>
                                 </ng-template>
-                              
+
                                 <ng-template #notFoundTemplate let-notFound>
                                   <div [innerHTML]="notFound"></div>
                                 </ng-template>
@@ -250,7 +257,7 @@
                               </div>
                         <!-- PARTY-end -->
                         </h5>
-                </div>    
+                </div>
                 <div *ngIf="entityType === 'PUBLICUSER'">
                     <h4>
                         {{biodata.full_name}}
@@ -258,11 +265,11 @@
                     <div>
                         @{{paramUsername}}
                     </div>
-                </div>                            
+                </div>
                 <div *ngIf="entityType === 'POLITICAL_PARTY'">
                     <h4>
                         {{biodata.full_name}}
-                    </h4>        
+                    </h4>
                     <div>
                         @{{paramUsername}}
                     </div>
@@ -274,7 +281,7 @@
                 <div *ngIf="entityType === 'LEGISLATIVE_DISTRICT'">
                     <h4>
                         {{biodata.full_name}}
-                    </h4>        
+                    </h4>
                     <div>
                         @{{paramUsername}}
                     </div>
@@ -311,7 +318,7 @@
 
 
     </div>
-    
+
 
 
 
@@ -329,15 +336,15 @@
                 <li class="list-group-item pointer"
                     [ngClass]="{ 'active': managedByActive, 'in-active': !managedByActive}">
                     <span class="pointer" (click)="managedByUsers()">Managed by</span>
-                </li>                
+                </li>
                 <li class="list-group-item pointer"
                     (click)="Activities()" [ngClass]="{ 'active': activitiesData, 'in-active': !activitiesData}">
-                    <span class="pointer">My Posts</span> 
+                    <span class="pointer">My Posts</span>
                 </li>
 
                 <!-- <li class="list-group-item pointer"
                     (click)="Profiles()" [ngClass]="{ 'active': profileData, 'in-active': !profileData}">
-                    <span class="pointer">Profile</span> 
+                    <span class="pointer">Profile</span>
                 </li> -->
                 <li class="list-group-item pointer" *ngFor="let profileTemplate of profilesTemplates" (click)="Profiles(profileTemplate.name);loadTemplate(profileTemplate.profileTemplateId)" [ngClass]="{ 'active': profileTemplate.profileTemplateId == activeTemplate && (!activitiesData && !managedByActive), 'in-active': profileTemplate.profileTemplateId != activeTemplate && (!activitiesData && !managedByActive)}">
                     <i class="material-icons">{{profileTemplate.profileIcon}}</i> {{profileTemplate.name}}
@@ -352,7 +359,7 @@
             <div class="widget-div">
                 <div class="widget widget-tabbed">
                     <!-- Nav tab -->
-    
+
                     <div class="gap gray-bg">
                         <div class="container-fluid">
                             <div class="row">
@@ -398,7 +405,7 @@
                                                                     <li class="nav-item"
                                                                         *ngFor="let profileTemplate of profilesTemplates">
                                                                         <div>
-                                                                            <span>    
+                                                                            <span>
                                                                                 <a class="nav-link template-tab text-black-50" data-toggle="tab"
                                                                                 [routerLink]=""
                                                                                 (click)="loadTemplate(profileTemplate.profileTemplateId)"
@@ -424,15 +431,15 @@
                                                                                         *ngFor="let profileTemplate of availableProfileTemplates"
                                                                                         (click)="addProfileData(profileTemplate)">
                                                                                     {{profileTemplate.name}}
-                                                                                </button> 
+                                                                                </button>
                                                                             </div>
-                                                                        </div> 
+                                                                        </div>
                                                                     </li>
                                                                 </ul>
                                                             </div>
                                                         </div> -->
                                                     </div>
-    
+
                                                     <div class="card-body content">
                                                         <div class="tab-content text-center">
                                                             <div class="tab-pane active" id="templateType">
@@ -449,19 +456,19 @@
                             </div>
                         </div>
                     </div>
-    
+
                     <!-- End nav tab -->
-    
+
                     <!-- Tab panes -->
                     <div class="tab-content">
-    
-    
+
+
                         <!-- Tab timeline -->
                         <div class="tab-pane animated active fadeInRight" id="my-timeline">
                             <div class="user-profile-content">
-    
+
                                 <!-- Begin timeline -->
-    
+
                                 <!-- End timeline -->
                             </div><!-- End div .user-profile-content -->
                         </div><!-- End div .tab-pane -->
