social-login-button-added-on-login-1

--- a/src/app/components/security/login/login.component.html
+++ b/src/app/components/security/login/login.component.html
@@ -31,7 +31,7 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="btn-group">
-        <button type="button" class="btn btn-primary" title="Sign in with Facebook">
+        <button type="button" class="btn  btn-outline-primary" title="Sign in with Facebook">
           Sign in with
           <i class="fa fa-facebook"></i>
         </button>
@@ -39,7 +39,7 @@
     </div>
     <div class="col-sm-6">
       <div class="btn-group">
-        <button type="button" class="btn btn-danger" title="Sign in with Google">
+        <button type="button" class="btn  btn-outline-danger" title="Sign in with Google">
           Sign in with
           <i class="fa fa-google-plus"></i>
         </button>
@@ -50,7 +50,7 @@
   <div class="row">
     <div class="col-sm-6">
       <div class="btn-group">
-        <button type="button" class="btn btn-info" title="Sign in with LinkedIn">
+        <button type="button" class="btn  btn-outline-info" title="Sign in with LinkedIn">
           Sign in with
           <i class="fa fa-linkedin"></i>
         </button>
@@ -58,7 +58,7 @@
     </div>
     <div class="col-sm-6">
       <div class="btn-group">
-        <button type="button" class="btn btn-primary" title="Sign in with Twitter">
+        <button type="button" class="btn  btn-outline-primary" title="Sign in with Twitter">
           Sign in with
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </button>
