--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -196,7 +196,7 @@
         </div>
         <!-- /.col-lg-3 -->
         <div class="col-lg-8">
-
+            <app-alert [dismissOnTimeout]=3000></app-alert>
             <router-outlet></router-outlet>
 
         </div> 
